set up framework of project

--- a/package.json
+++ b/package.json
@@ -8,18 +8,27 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@nexus/schema": "^0.15.0",
+    "@prisma/cli": "^2.5.1",
+    "@prisma/client": "^2.5.1",
     "expo": "~38.0.8",
     "expo-status-bar": "^1.0.2",
+    "graphql": "^15.3.0",
+    "graphql-yoga": "^1.18.3",
+    "nexus-prisma": "^0.16.2",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "ts-node": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
-    "@types/react": "~16.9.41",
-    "@types/react-native": "~0.62.13",
-    "typescript": "~3.9.5"
+    "@types/jest": "^26.0.10",
+    "@types/react": "^16.9.47",
+    "@types/react-native": "^0.62.18",
+    "@types/react-test-renderer": "^16.9.3",
+    "typescript": "^3.9.7"
   },
   "private": true
 }
