--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "@nexus/schema": "^0.15.0",
     "@prisma/cli": "^2.5.1",
     "@prisma/client": "^2.5.1",
+    "bcryptjs": "^2.4.3",
     "expo": "~38.0.8",
     "expo-status-bar": "^1.0.2",
     "graphql": "^15.3.0",
     "graphql-yoga": "^1.18.3",
+    "jsonwebtoken": "^8.5.1",
     "nexus-prisma": "^0.16.2",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
