--- a/package.json
+++ b/package.json
@@ -8,24 +8,40 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@eva-design/eva": "^2.0.0",
     "@nexus/schema": "^0.15.0",
     "@prisma/cli": "^2.5.1",
     "@prisma/client": "^2.5.1",
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/bottom-tabs": "^5.8.0",
+    "@react-navigation/native": "^5.7.3",
+    "@react-navigation/stack": "^5.9.0",
+    "@ui-kitten/components": "^5.0.0",
+    "@ui-kitten/eva-icons": "^5.0.0",
+    "apollo-boost": "^0.4.9",
     "bcryptjs": "^2.4.3",
     "expo": "~38.0.8",
     "expo-status-bar": "^1.0.2",
     "graphql": "^15.3.0",
+    "graphql-tag": "^2.11.0",
     "graphql-yoga": "^1.18.3",
     "jsonwebtoken": "^8.5.1",
     "nexus-prisma": "^0.16.2",
     "react": "~16.11.0",
+    "react-apollo": "^3.1.5",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
+    "react-native-gesture-handler": "~1.6.0",
+    "react-native-reanimated": "~1.9.0",
+    "react-native-safe-area-context": "~3.0.7",
+    "react-native-screens": "~2.9.0",
+    "react-native-svg": "^12.1.0",
     "react-native-web": "~0.11.7",
     "ts-node": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
+    "@expo/webpack-config": "^0.12.27",
     "@types/jest": "^26.0.10",
     "@types/react": "^16.9.47",
     "@types/react-native": "^0.62.18",
