--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "apollo-boost": "^0.4.9",
     "bcryptjs": "^2.4.3",
     "expo": "~38.0.8",
+    "expo-font": "~8.2.1",
     "expo-status-bar": "^1.0.2",
     "graphql": "^15.3.0",
     "graphql-tag": "^2.11.0",
@@ -37,8 +38,8 @@
     "react-native-screens": "~2.9.0",
     "react-native-svg": "^12.1.0",
     "react-native-web": "~0.11.7",
-    "ts-node": "^9.0.0",
-    "expo-font": "~8.2.1"
+    "syllable": "^4.1.0",
+    "ts-node": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
