--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
     "@react-navigation/bottom-tabs": "^5.8.0",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
+    "@types/react-redux": "^7.1.9",
+    "@types/remote-redux-devtools": "^0.5.4",
     "@ui-kitten/components": "^5.0.0",
     "@ui-kitten/eva-icons": "^5.0.0",
     "apollo-boost": "^0.4.9",
+    "apollo-link": "^1.2.14",
+    "apollo-link-context": "^1.0.20",
     "bcryptjs": "^2.4.3",
     "expo": "~38.0.8",
     "expo-font": "~8.2.1",
@@ -33,11 +37,16 @@
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-largelist-v3": "^3.0.15",
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
+    "react-native-spring-scrollview": "^2.0.23",
     "react-native-svg": "^12.1.0",
     "react-native-web": "~0.11.7",
+    "react-redux": "^7.2.1",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "syllable": "^4.1.0",
     "ts-node": "^9.0.0"
   },
@@ -48,6 +57,8 @@
     "@types/react": "^16.9.47",
     "@types/react-native": "^0.62.18",
     "@types/react-test-renderer": "^16.9.3",
+    "redux-devtools-extension": "^2.13.8",
+    "remote-redux-devtools": "^0.5.16",
     "typescript": "^3.9.7"
   },
   "private": true
